css/src/components/system-admin--modules.css
/**
 * @file
 * System admin module: modules page.
 */

.system-modules thead > tr {
  border: 0;
}
.system-modules div.incompatible {
  font-weight: bold;
}
.system-modules td.checkbox {
  min-width: 25px;
  width: 4%;
}
.system-modules td.module {
  width: 25%;
}
.system-modules td {
  vertical-align: top;
}
.system-modules label,
.system-modules-uninstall label {
  color: #1d1d1d;
  font-size: 1.15em;
}
.system-modules details {
  color: #5c5c5b;
  line-height: 20px;
  overflow: hidden; /* truncates descriptions if too long */
  text-overflow: ellipsis;
  white-space: nowrap;
}
.system-modules details[open] {
  height: auto;
  overflow: visible;
  white-space: normal;
}
.system-modules details[open] summary .text {
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  text-transform: none;
}
.system-modules td details a {
  color: #5c5c5b;
  border: 0;
}
.system-modules td details {
  border: 0;
  margin: 0;
  height: 20px;
}
.system-modules td details summary {
  padding: 0;
  text-transform: none;
  font-weight: normal;
  cursor: default;
}
.system-modules td {
  padding-left: 0; /* LTR */
}
[dir="rtl"] .system-modules td {
  padding-left: 12px;
  padding-right: 0;
}

@media screen and (max-width: 40em) {
  .system-modules td.name {
    width: 20%;
  }
  .system-modules td.description {
    width: 40%;
  }
}
.system-modules .requirements {
  padding: 5px 0;
  max-width: 490px;
}
.system-modules .links {
  overflow: hidden; /* prevents collapse */
}
.system-modules .checkbox {
  margin: 0 5px;
}
.system-modules .checkbox .form-item {
  margin-bottom: 0;
}
.admin-requirements,
.admin-required {
  font-size: 0.9em;
  color: #666;
}
.admin-enabled {
  color: #080;
}
.admin-missing {
  color: #f00;
}
.module-link {
  display: block;
  padding: 2px 20px;
  white-space: nowrap;
  margin-top: 2px;
  float: left; /* LTR */
}
[dir="rtl"] .module-link {
  float: right;
}
.module-link-help {
  background: url(../../../images/core/787878/questionmark-disc.svg) 0 50% no-repeat; /* LTR */
}
[dir="rtl"] .module-link-help {
  background-position: top 50% right 0;
}
.module-link-permissions {
  background: url(../../../images/core/787878/key.svg) 0 50% no-repeat; /* LTR */
}
[dir="rtl"] .module-link-permissions {
  background-position: top 50% right 0;
}
.module-link-configure {
  background: url(../../../images/core/787878/cog.svg) 0 50% no-repeat; /* LTR */
}
[dir="rtl"] .module-link-configure {
  background-position: top 50% right 0;
}

